fix sources being invisible in the editor

--- a/src/c3nav/editor/static/editor/css/editor.css
+++ b/src/c3nav/editor/static/editor/css/editor.css
@@ -170,6 +170,9 @@ form button.invisiblesubmit {
 }
 
 /* Styles inside leaflet */
+.leaflet-map-pane svg {
+    z-index: auto;
+}
 .leaflet-control-layers-overlays label {
     margin-bottom:0;
 }
